--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-    "name": "nonce_sense",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "ts-node src/index.ts"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "@types/node": "^22.13.10",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.8.2"
-    },
-    "dependencies": {
-        "axios": "^1.8.4",
-        "chalk": "^4.1.2",
-        "dotenv": "^16.0.3"
-    }
+  "name": "nonce_sense",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "ts-node src/index.ts",
+    "fmt": "prettier --write ."
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.13.10",
+    "@types/node-telegram-bot-api": "^0.64.8",
+    "prettier": "^3.5.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "axios": "^1.8.4",
+    "dotenv": "^16.0.3",
+    "express": "^4.21.2",
+    "node-telegram-bot-api": "^0.66.0"
+  }
 }
