--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts",
     "fmt": "prettier --write ."
   },
   "keywords": [],
@@ -14,6 +15,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.10",
     "@types/node-telegram-bot-api": "^0.64.8",
+    "nodemon": "^2.0.22",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
