add btc price in bot resp

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ TG_TOKEN=x
 CHAT_ID=x
 WORKERS=[{"name":"x","address":"bc1"},{"name":"y","address":"bc1"}]
 SERVER_URL=https://fake.com
+COINGECKO_API_KEY=x
