--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "build": "tsc --outdir ./dist",
+    "start": "npm run build && node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "fmt": "prettier --write ."
   },
