--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^5.0.1",
     "@types/node": "^22.13.10",
     "@types/node-telegram-bot-api": "^0.64.8",
     "nodemon": "^2.0.22",
@@ -22,9 +21,12 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.8.4",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-cron": "^4.2.1",
+    "node-telegram-bot-api": "^0.66.0",
+    "@types/express": "^5.0.1"
   }
 }
