--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@types/express": "^5.0.1",
     "@types/node-cron": "^3.0.11",
     "axios": "^1.8.4",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
     "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0",
-    "@types/express": "^5.0.1"
+    "tough-cookie": "^2.5.0"
   }
 }
