--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^5.0.1",
     "@types/node-cron": "^3.0.11",
     "axios": "^1.8.4",
+    "bitcoin-etf-data": "^1.0.5",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
     "node-cron": "^4.2.1",
