--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --outdir ./dist",
-    "start": "npm run build && node dist/index.js",
+    "build:prod": "esbuild src/index.ts --bundle --platform=node --minify --target=node20 --outfile=dist/index.js --external:express --external:node-telegram-bot-api",
+    "start": "npm run build:prod && node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "fmt": "prettier --write ."
   },
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^22.13.10",
     "@types/node-telegram-bot-api": "^0.64.8",
+    "esbuild": "^0.25.9",
     "nodemon": "^2.0.22",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
