--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:prod": "node esbuild.config.js",
-    "start": "npm run build:prod && node dist/index.js",
+    "start": "npm run size && node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts",
     "fmt": "prettier --write .",
     "size": "npm run build:prod && ls -lh dist/index.js"
