--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^22.13.10",
     "@types/node-telegram-bot-api": "^0.64.8",
     "esbuild": "^0.25.9",
@@ -23,7 +24,7 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "bitcoin-etf-data": "^1.0.8",
+    "bitcoin-etf-data": "2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.21.2",
     "node-cron": "^4.2.1",
